--- a/app/src/main/res/layout/item_view.xml
+++ b/app/src/main/res/layout/item_view.xml
@@ -23,9 +23,9 @@
                 android:layout_height="wrap_content"
                 android:text="@string/country_name"
                 android:textStyle="bold"
-                android:textSize="16sp"
+                android:textSize="12sp"
                 android:textColor="@color/black"
-                android:layout_marginStart="16dp"
+                android:layout_marginStart="8dp"
                 app:layout_constraintStart_toStartOf="parent"/>
 
             <TextView
@@ -33,27 +33,31 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/country_region"
-                android:textSize="16sp"
+                android:textSize="12sp"
                 app:layout_constraintStart_toEndOf="@id/txt_name"/>
             <TextView
                 android:id="@+id/txt_code"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/country_code"
-                android:textSize="16sp"
-                android:layout_marginEnd="16dp"
+                android:textSize="12sp"
+                android:layout_marginEnd="8dp"
                 app:layout_constraintEnd_toEndOf="parent"/>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <Space
+            android:layout_width="match_parent"
+            android:layout_height="10dp"/>
 
         <TextView
             android:id="@+id/txt_capital"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/country_capital"
-            android:textSize="16sp"
+            android:textSize="12sp"
             android:layout_marginTop="4dp"
-            android:layout_marginStart="16dp"/>
+            android:layout_marginStart="8dp"/>
 
     </LinearLayout>
 
